crates/sutura-app/tests/snapshots/revenue-by-region__rows.snap
---
source: crates/sutura-app/tests/golden.rs
expression: rows
---
columns:
  - region
  - period
  - revenue
rows:
  - - Text: north
    - Text: 2026-06-01
    - Integer: 225072
  - - Text: south
    - Text: 2026-06-01
    - Integer: 244950
  - - Text: west
    - Text: 2026-06-01
    - Integer: 1
  - - "Null"
    - Text: 2026-06-01
    - Integer: 99999
